--- a/index.html
+++ b/index.html
@@ -2,64 +2,81 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Puput's Personal Site</title>
+    <title>Puput Hariyati</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
-    <table cellspacing="20">
-      <tr>
-        <td><img src="puput profile picture.png" alt="puput profile picture" style="width:150px; height:150px;" /></td>
-        <td><h1>Puput Hariyati</h1>
-        <p><em>Showroom Manager at <strong><a href="https://indocasaretail.com/" target="_blank">Indocasa Furniture</a> Surabaya</strong></em></p>
-        <p>I am a showroom manager at Indocasa Furniture, Surabaya.<br>
-        Indocasa is a furniture company specializing in solid teak wood. <br>
-        If you are looking for solid wood furniture for local or export projects, feel free to contact me. <br>
-        Cheers!</p></td>
-      </tr>
-    </table>
-    <hr>
-    <h3>Formal Education</h3>
-    <ul>
-      <li> Bachelor's Degree, Industrial Engineering at UPN Yogyakarta </li>
-      <li> High School Diploma at SMAN 7 Balikpapan </li>
-    </ul>
-    <hr>
-    <h3> Work Experience </h3>
-    <table cellspacing="10">
-      <thead>
-        <tr>
-          <th> Dates </th>
-          <th> Work </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td> Aug 2022 - Present </td>
-          <td> Showroom Manager at Indocasa Furniture, Surabaya </td>
-        </tr>
-        <tr>
-          <td> Sept 2021 - Aug 2022 </td>
-          <td> Sales Project, Store Leader at Vivere Multi Kreasi, Bali </td>
-        </tr>
-      </tbody>
-    </table>
-    <hr>
-    <h3> Skills </h3>
-    <table>
-      <tr>
-        <td> Communication (Indonesian and English) </td>
-        <td> ⭐⭐⭐⭐ </td>
-      </tr>
-      <tr>
-        <td> Sales & Marketing </td>
-        <td> ⭐⭐⭐ </td>
-      </tr>
-      <tr>
-        <td> Wordpress & Shopify </td>
-        <td> ⭐⭐ </td>
-      </tr>
-    </table>
-    <hr>
-    <a href="hobbies.html"> My Hobbies </a><br>
-    <a href="contact-me.html"> Contact me </a>
+    <div class="top-container">
+      <img class="top-cloud" src="cloud_img.png" alt="cloud">
+      <h1>I'm Puput.</h1>
+      <h2>a sales person.</h2>
+      <img class="bottom-cloud" src="cloud_img.png" alt="cloud">
+      <img class="beach"src="beach.png" alt="beach">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="puput.png" alt="puput profile picture" width="15%">
+        <h2>Hello.</h2>
+        <p>I'm an Industrial Engineering graduate. <br>
+          A sales person in Furniture industry for 5 years and in IT industry 2 years. <br>
+          My hobby is learning both human and computer languages, and chess.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row1">
+          <img class="sales-img" src="sales.png" alt="skill-1">
+          <h3>Sales & Marketing</h3>
+          <p>Collect leads. Follow up leads and sort prospects. Convert prospects into clients.</p>
+        </div>
+        <div class="skill-row2">
+          <img class="analytics-img" src="analytics.png" alt="skill-2">
+          <h3>Data Analytics</h3>
+          <p>Contacts, Sales and Business analytics.</p>
+        </div>
+        <div class="skill-row1">
+          <img class="communication-img" src="communication.png" alt="skill-3">
+          <h3>Communication</h3>
+          <p>I am comfortable using English and Bahasa Indonesia on practical, social and professional topics.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="projects">
+        <h2>My Projects.</h2>
+        <div class="dictionary">
+          <img class="dictionary-img" src="dictionary.png" alt="dictionary">
+          <h3><a class="mydictionary"href="dictionary.html" target="blank">My Dictionary</a></h3>
+          <p>To help me remember vocabularies I have learned mostly from Duolingo.</p>
+        </div>
+        <div class="bahasa">
+          <img class="indo-img" src="indo.png" alt="bahasa">
+          <h3><a class="mybahasa"href="bahasa.html" target="blank">Belajar Bahasa</a></h3>
+          <p>30 days challenge to learn bahasa indonesia</p>
+        </div>
+        <div class="colab">
+          <img class="colab-img" src="colab.png" alt="colab">
+          <h3>Co-Lab House</h3>
+          <p>A space where people, young and old, poor and rich, can get together and learn from each others.
+          A place where they can have group studies, research, discussion, workshops or just friends.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you need a Duolingo or Chess mate</h3>
+        <p> I'm not super, but I love learning human and computer languages and playing chess. <br>
+          Let's practice together.</p>
+        <a class="btn" href="mailto:puputhariyati@email.com">CONTACT ME</a>
+      </div>
+    </div>
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/puputhariyati/">LinkedIn</a>
+      <a class="footer-link" href="https://www.instagram.com/puputhariyati/">Instagram</a>
+      <a class="footer-link" href="https://www.duolingo.com/profile/PuputHariy1">Duolingo</a>
+      <p class="copyright">©2023 Puput Hariyati.</p>
+    </div>
   </body>
 </html>
